--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       padding: 20px; 
       margin-top: 20px;
       background: white;
-      width: 8.5in; /* Standard Word doc width */
+      width: 8.5in; /* Standard Word document width */
       margin-left: auto;
       margin-right: auto;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -33,7 +33,7 @@
     button { 
       margin-right: 10px; 
     }
-    /* Style links to be light grey without the default underline */
+    /* Link styling */
     a {
       color: #999;
       text-decoration: none;
@@ -41,11 +41,11 @@
     a:hover {
       text-decoration: underline;
     }
-    /* Style for the outer parentheses */
+    /* Outer parentheses styling */
     .outer-paren {
       color: #999;
     }
-    /* Table styling */
+    /* Table preview styling */
     #preview .table-container {
       overflow-x: auto;
       margin-bottom: 1em;
@@ -60,9 +60,9 @@
       padding: 8px;
       border: 1px solid #ccc;
       word-wrap: break-word;
-      font-size: 0.9em;  /* Smaller font size for table cells */
+      font-size: 0.9em; /* Slightly smaller font size */
     }
-    /* Table head and cell alignment */
+    /* Table header and cell alignment */
     #preview th {
       text-align: left;
       vertical-align: bottom;
@@ -74,7 +74,7 @@
   </style>
 </head>
 <body>
-  <h1>Markdown Converter</h1>
+  <h1>Markdown Preview and Converter</h1>
   <textarea id="markdownInput" placeholder="Paste your markdown here..."></textarea>
   <br>
   <button id="previewBtn">Preview HTML</button>
@@ -82,16 +82,15 @@
   <div id="preview"></div>
 
   <script>
-    // Initialize markdown-it
+    // Initialize markdown-it with options.
     const md = window.markdownit({
       html: true,
       linkify: true,
       typographer: true
     });
 
-    // Custom plugin to modify link rendering:
-    // - Display the URL domain as the link text
-    // - Store the original text as a tooltip via the title attribute
+    // Custom plugin: changes link display to domain,
+    // sets title to the original text, and forces links to open in new tabs.
     function linkDomainPlugin(md) {
       const defaultLinkOpen = md.renderer.rules.link_open || function(tokens, idx, options, env, self) {
         return self.renderToken(tokens, idx, options);
@@ -110,15 +109,15 @@
         if (hrefIndex >= 0) {
           href = token.attrs[hrefIndex][1];
         }
-        // Extract the domain
+        // Extract the domain.
         let domain = href;
         try {
           const url = new URL(href);
           domain = url.hostname;
         } catch (e) {
-          // fallback if URL parsing fails
+          // fallback if URL parsing fails.
         }
-        // Gather the original link text
+        // Gather the original link text.
         let originalText = '';
         for (let i = idx + 1; i < tokens.length; i++) {
           if (tokens[i].type === 'text') {
@@ -127,9 +126,12 @@
             break;
           }
         }
-        // Set the title attribute for the hover tooltip
+        // Set the title attribute (hover tooltip).
         token.attrSet('title', originalText);
-        // Flag environment for our text renderer to output the domain instead of the original text
+        // Ensure link opens in a new tab.
+        token.attrSet('target', '_blank');
+        token.attrSet('rel', 'noopener noreferrer');
+        // Flag environment for our text renderer.
         env._inLink = true;
         env._linkDomain = domain;
         return defaultLinkOpen(tokens, idx, options, env, self);
@@ -138,7 +140,7 @@
       md.renderer.rules.text = function(tokens, idx, options, env, self) {
         if (env._inLink && env._linkDomain) {
           const output = env._linkDomain;
-          env._linkDomain = null; // only output once per link
+          env._linkDomain = null; // only output once per link.
           return output;
         }
         return defaultText(tokens, idx, options, env, self);
@@ -150,17 +152,15 @@
         return defaultLinkClose(tokens, idx, options, env, self);
       };
     }
-
     md.use(linkDomainPlugin);
 
-    // Function to wrap adjacent outer parentheses (if they exist as text nodes) in a span
+    // Wrap adjacent outer parentheses (if they exist as text nodes) in a span for styling.
     function wrapAdjacentParentheses(container) {
       const anchors = container.querySelectorAll('a');
       anchors.forEach(anchor => {
-        // Check previous sibling for an opening parenthesis "("
+        // Check previous sibling for an opening parenthesis "(".
         let prev = anchor.previousSibling;
         if (prev && prev.nodeType === Node.TEXT_NODE) {
-          // Look for a "(" at the end of the text node (possibly with some whitespace)
           const match = prev.textContent.match(/(.*?)(\s*\()\s*$/);
           if (match) {
             prev.textContent = match[1];
@@ -170,7 +170,7 @@
             anchor.parentNode.insertBefore(span, anchor);
           }
         }
-        // Check next sibling for a closing parenthesis ")"
+        // Check next sibling for a closing parenthesis ")".
         let next = anchor.nextSibling;
         if (next && next.nodeType === Node.TEXT_NODE) {
           const match = next.textContent.match(/^\s*(\))(\s*.*)/);
@@ -189,7 +189,7 @@
       });
     }
 
-    // Function to wrap tables in a scrollable container
+    // Wrap tables in a scrollable container.
     function wrapTables(container) {
       const tables = container.querySelectorAll("table");
       tables.forEach(table => {
@@ -200,24 +200,36 @@
       });
     }
 
-    // Button to preview HTML
+    // Preview button: Render markdown, then wrap tables and parentheses.
     document.getElementById('previewBtn').addEventListener('click', () => {
       const mdText = document.getElementById('markdownInput').value;
       const htmlContent = md.render(mdText);
       const previewDiv = document.getElementById('preview');
       previewDiv.innerHTML = htmlContent;
-      // Wrap tables in a scrollable container
       wrapTables(previewDiv);
-      // Wrap outer parentheses for links (if any)
       wrapAdjacentParentheses(previewDiv);
     });
 
-    // Button to export to Word
+    // Export to Word button: Wrap content with inline CSS (including table borders and alignment)
+    // before converting to DOCX.
     document.getElementById('exportBtn').addEventListener('click', () => {
       const content = document.getElementById('preview').innerHTML;
-      const header = "<html xmlns:o='urn:schemas-microsoft-com:office:office' " +
-                     "xmlns:w='urn:schemas-microsoft-com:office:word' " +
-                     "xmlns='http://www.w3.org/TR/REC-html40'><head><meta charset='utf-8'><title>Export</title></head><body>";
+      const header = `
+      <html xmlns:o='urn:schemas-microsoft-com:office:office' 
+            xmlns:w='urn:schemas-microsoft-com:office:word' 
+            xmlns='http://www.w3.org/TR/REC-html40'>
+      <head>
+        <meta charset='utf-8'>
+        <title>Export</title>
+        <style>
+          body { font-family: "Inter", "Helvetica Neue", sans-serif; }
+          table { border-collapse: collapse; width: 100%; }
+          table, th, td { border: 1px solid #000; }
+          th { text-align: left; vertical-align: bottom; padding: 5px; }
+          td { text-align: left; vertical-align: top; padding: 5px; }
+        </style>
+      </head>
+      <body>`;
       const footer = "</body></html>";
       const sourceHTML = header + content + footer;
       const converted = htmlDocx.asBlob(sourceHTML);
